# deptui

./: CLAUDE.md  Cargo.toml  README.md  flake.nix
src/: app.rs  askpass.rs  deploy.rs  host.rs  lib.rs  main.rs  ui.rs
tests/: deploy_run.rs  flake_discover.rs
