[package]
name = "deptui"
version = "0.1.0"
edition = "2021"
description = "A terminal UI wrapper around serokell/deploy-rs"
license = "MIT"

[lib]
name = "deptui"
path = "src/lib.rs"

[[bin]]
name = "deptui"
path = "src/main.rs"

[dependencies]
ratatui = { version = "0.28", features = ["unstable-rendered-line-info"] }
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
libc = "0.2"
tempfile = "3"
thiserror = "1"
zeroize = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
serial_test = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
